<resources>
    <string name="app_name">Daily Tasks</string>
    <string name="daily_progress">Daily Progress</string>
    <string name="progress_percent">%d %%</string>
    <string name="work">Work</string>
    <string name="personal">Personal</string>
    <string name="your_tasks">Your Tasks</string>
    <string name="title_hint">ex. Reply all email works</string>
    <string name="task_name">Task Name</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="category">Category</string>
    <string name="add_task">Add Task</string>
    <string name="dialog_task_complete_title">Task status</string>
    <string name="dialog_task_complete_body">Have you completed this task??</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create_new_task">Create New Task</string>
    <string name="search_query">Search task</string>
    <string name="user_name_hint">What should we call you?</string>
    <string name="proceed">Proceed</string>
    <string name="select_your_avatar">Select your avatar</string>
    <string name="menu_select_camera">Take picture</string>
    <string name="menu_select_gallery">Select from gallery</string>
    <string name="menu_remove_photo">Remove photo</string>
    <string name="user_name">User name</string>
    <string name="stats_completed_title">Completed</string>
    <string name="stats_daily_title">Tasks/Day</string>
    <string name="stats_productivity_title">Productivity</string>
    <string name="bar_chart_title">Completed Tasks</string>
    <string name="line_chart_title">Task Type</string>
    <string name="reminder">Reminder!!</string>
    <string name="reminder_noti_title">New task reminder!!</string>
    <string name="username_input_error">Username cannot be blank</string>
    <string name="task_name_error">Please enter task name</string>
    <string name="week_range">%1$s - %2$s</string>
    <string name="most_active">Most Active</string>
    <string name="time_per_task">Time per task</string>
    <string name="profile_error">Could not create profile</string>
    <string name="dismiss">Dismiss</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>