<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.andruid.magic.dailytasks.viewmodel.SignupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ebony"
        tools:context=".ui.fragment.SignupFragment">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_iv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/user"
            app:layout_constraintBottom_toTopOf="@id/profile_title_tv"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="@id/profile_title_tv"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintStart_toStartOf="@id/profile_title_tv"
            app:shapeAppearanceOverlay="@style/CircularImageAppearance" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profile_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:paddingTop="16dp"
            android:text="@string/select_your_avatar"
            android:textAppearance="?textAppearanceHeadline6"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/center_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/rounded_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/user_name_label_tv" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/user_name_label_tv"
            style="@style/TextLabelStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="16dp"
            android:text="@string/user_name"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/center_guideline" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_input"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:theme="@style/Theme.DailyTasks.TextInput"
            app:error="@{viewModel.errorLiveData}"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/user_name_label_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name_hint"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingHorizontal="24dp"
                android:paddingVertical="16dp"
                android:text="@={viewModel.usernameLiveData}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/proceed_btn"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/scooter"
            android:paddingVertical="8dp"
            android:text="@string/proceed"
            android:textAllCaps="false"
            app:icon="@drawable/ic_right_arrow"
            app:iconGravity="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/name_input" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/center_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>